Add ScoreboardController
