# src/main/java/com/github/tmd/gamelog/adapter/rest/server/scoreboard/dto/ScoreboardPlayerEntryJsonDto.java
@@ -1,9 +1,9 @@
-package com.github.tmd.gamelog.application.score.dto;
+package com.github.tmd.gamelog.adapter.rest.server.scoreboard.dto;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.UUID;
 
-public record ScoreboardPlayerEntryDto(
+public record ScoreboardPlayerEntryJsonDto(
     @JsonProperty(value = "id", required = true) UUID id,
     @JsonProperty("name") String name
 ) {
